Building some more...

--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -42,34 +42,28 @@
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">				
-				<!--<div class="section">-->
-					<p class="top">		
-						Pneumatique Electronique is here on a monthly basis to cater to your electronic music needs every third saturday night from 9pm to 2am. Using our resident DJs and guest DJs or guest acts we'll be playing danceable electronic music to you. Our ambition is to reduce the gap between the plethora of electronic genres available out there!					
-					</p>
-					<p>
-					Check out <a href="http://facebook.com/pneumatique.electronique">Facebook</a> for more information about every event!
-					</p>
+				<p class="top">		
+					<h4>For the first time on a stage in Stockholm - MEMMAKER! (CA/DK)</h4>
+				</p>
+				<p>
+				Loads of information about the event here.
+				</p>
+				<p>
+				Link to facebook-event.
+				</p>
+				<p>
+				Link to free download.
+				</p>
 
-					<h4>Resident DJs</h4>
-					<strong>DJ Nephilim</strong> <br /><span class="genres">(Electronica / Rythmic noise)</span><br /><br />
-					<strong>Itchy && Scratchy</strong><br /> <span class="genres">(Aggrotech / Electro / Hardstyle / House / Rythmic noise)</span><br /><br />
-					<strong>DJ Kraken</strong> <br /><span class="genres">(Aggrotech / IDM / Rythmic noise)</span><br /><br />
+				<h4>Resident DJs</h4>
+				<strong>DJ Nephilim</strong> <br /><span class="genres">(Electronica / Rythmic noise)</span><br /><br />
+				<strong>Itchy && Scratchy</strong><br /> <span class="genres">(Aggrotech / Electro / Hardstyle / House / Rythmic noise)</span><br /><br />
+				<strong>DJ Kraken</strong> <br /><span class="genres">(Aggrotech / IDM / Rythmic noise)</span><br /><br />
 
-					<h4>Venue</h4>
+				<h4>Venue</h4>
 
-					Our venue is <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalen Klubb</a> at David Bagares gata 15, completely refurbished for 2011!
-					<br /><br />
-
-					<!-- <h4>The List</h4>
-					<p>Add your email to our list to get the latest info and news. <br />Of course, we'll <b>never</b>
-						sell or distribute your email to someone.</p>
-					<form action="/email" method="POST">
-						<input type="text" name="email" />
-						<input type="submit" value="save">
-					</form> -->
-				<!--</div>-->
-				
-				
+				Our venue is <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalen Klubb</a> at David Bagares gata 15, completely refurbished for 2011!
+				<br /><br />
 				<br class="clear"/>
 			</div>	
 							
