and so on, and so forth..

--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -37,13 +37,12 @@
     </header>
     
     <div id="main">
-			<a href="/en" style="display:block; float:right; margin-left:5px"><img src="/img/flags/png/gb.png" /> </a>
-			<a href="/" style="display:block; float:right"><img src="/img/flags/png/se.png" /> </a>			
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">				
 				<p class="top">		
-					<h4>For the first time on a stage in Stockholm - MEMMAKER! (CA/DK)</h4>
+					<center><h4>MEMMAKER</h4><br />
+					for the first time on stage in Stockholm, Sweden</center>
 				</p>
 				<p>
 				Loads of information about the event here.
