Slowly getting there.

--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -41,14 +41,16 @@
 			<br class="clear"/>
 			<div class="sections">				
 				<p class="top">		
-					<center><h4>MEMMAKER</h4><br />
+					<center><h1>MEMMAKER</h1><br />
 					for the first time on stage in Stockholm, Sweden</center>
 				</p>
 				<p>
-				Loads of information about the event here.
+				We've invited the Canadian/Danish band MEMMAKER to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
+				<br />
+				For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!
 				</p>
 				<p>
-				Link to facebook-event.
+				<a href="https://www.facebook.com/event.php?eid=150643561668481">Click here for more information and RSVP on our facebook-event!</a>
 				</p>
 				<p>
 				Link to free download.
