--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -42,7 +42,7 @@
 			<div class="sections">				
 				<p class="top">		
 					<center><h3>MEMMAKER</h3><br />
-					for the first time on stage in Stockholm, Sweden</center>
+					<h4>for the first time on stage in Stockholm, Sweden</h4></center>
 				</p>
 				<p>
 				We've invited the Canadian/Danish band MEMMAKER to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
