--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -45,15 +45,16 @@
 					<h4>for the first time on stage in Stockholm, Sweden</h4></center>
 				</p>
 				<p>
-				We've invited the Canadian/Danish band MEMMAKER to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
+				<center>We've invited the Canadian/Danish band MEMMAKER to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
 				<br />
-				For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!
+				For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!</center>
 				</p>
 				<p>
 				<a href="https://www.facebook.com/event.php?eid=150643561668481">Click here for more information and RSVP on our facebook-event!</a>
 				</p>
 				<p>
-				Link to free download.
+				So, now to the good stuff - the free download!<br />
+				Click this link and Get Your Ass To Club Pneumatique Electronique!<a href="http://club-pneumatique.org/Memmaker_-_Get_Your_Ass_To_Mars.mp3">MEMMAKER - Get Your Ass To Mars</a>
 				</p>
 
 				<h4>Resident DJs</h4>
