--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -38,6 +38,7 @@
     
     <div id="main">
 			<img src="/img/logo.png" id="logotype" />
+			<img src="/img/memmaker_logo_black.png" width="80%" height="80%" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">				
 				<p class="top">		
