--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -37,8 +37,8 @@
     </header>
     
     <div id="main">
-			<img src="/img/logo.png" id="logotype" />
-			<img src="/memmaker_logo_small.png" id="logotype" />
+			<img src="/img/logo.png" />
+			<img src="/memmaker_logo_small.png" />
 			<br class="clear"/>
 			<div class="sections">				
 				<p class="top">		
