--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -37,8 +37,10 @@
     </header>
     
     <div id="main">
-			<img src="/img/logo.png" />
+    		<center>
+			<img src="/img/logo.png" /><h3>&nbsp;+&nbsp;</h3>
 			<img src="/memmaker_logo_small.png" />
+			</center>
 			<br class="clear"/>
 			<div class="sections">				
 				<p class="top">		
