--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -38,7 +38,7 @@
     
     <div id="main">
     		<center>
-			<img src="/img/logo.png" /><h3>&nbsp;+&nbsp;</h3>
+			<img src="/img/logo.png" />&nbsp;&nbsp;
 			<img src="/memmaker_logo_small.png" />
 			</center>
 			<br class="clear"/>
