--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -44,21 +44,22 @@
 			<br class="clear"/>
 			<div class="sections">				
 				<p class="top">		
-					<center><h3>MEMMAKER</h3><br />
-					<h4>for the first time on stage in Stockholm, Sweden</h4></center>
+					<center><h3>MEMMAKER<br />
+					for the first time on stage in Stockholm, Sweden</h3></center>
 				</p>
 				<p>
-				<center>We've invited the Canadian/Danish band <strong>MEMMAKER</strong> to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album <strong>HOW TO ENLIST IN A ROBOT UPRISING</strong> is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
+				<div align="justify">We've invited the Canadian/Danish band <strong>MEMMAKER</strong> to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album <strong>HOW TO ENLIST IN A ROBOT UPRISING</strong> is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
 				<br />
-				For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!</center>
+				For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!
+				</div>
 				</p>
 				<p>
-				<center><a href="https://www.facebook.com/event.php?eid=150643561668481">Click here for more information and RSVP on our facebook-event!</a></center>
+				<div align="justify"><a href="https://www.facebook.com/event.php?eid=150643561668481">Click here for more information and RSVP on our facebook-event!</a></div>
 				</p>
-				<p><center>
+				<p><div align="justify">
 				So, now to the good stuff - the free download!<br />
 				Click this link and Get Your Ass To Club Pneumatique Electronique!<a href="http://club-pneumatique.org/Memmaker_-_Get_Your_Ass_To_Mars.mp3">MEMMAKER - Get Your Ass To Mars</a>
-				</center></p>
+				</div></p>
 
 				<h4>Resident DJs</h4>
 				<strong>DJ Nephilim</strong> <br /><span class="genres">(Electronica / Rythmic noise)</span><br /><br />
