--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -54,11 +54,11 @@
 				</div>
 				</p>
 				<p>
-				<div align="justify"><a href="https://www.facebook.com/event.php?eid=150643561668481">Click here for more information and RSVP on our facebook-event!</a></div>
+				<div align="center"><a href="https://www.facebook.com/event.php?eid=150643561668481"><h1>Click here for more information and RSVP on our facebook-event!</h1></a></div>
 				</p>
 				<p><div align="justify">
 				So, now to the good stuff - the free download!<br />
-				Click this link and Get Your Ass To Club Pneumatique Electronique!<a href="http://club-pneumatique.org/Memmaker_-_Get_Your_Ass_To_Mars.mp3">MEMMAKER - Get Your Ass To Mars</a>
+				Click this link and Get Your Ass To Club Pneumatique Electronique!<a href="http://club-pneumatique.org/Memmaker_-_Get_Your_Ass_To_Mars.mp3"><h1>MEMMAKER - Get Your Ass To Mars</h1></a>
 				</div></p>
 
 				<h4>Resident DJs</h4>
