--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -54,7 +54,7 @@
 				</div>
 				</p>
 				<p>
-				<div align="center"><a href="https://www.facebook.com/event.php?eid=150643561668481"><h1>Click here for more information and RSVP on our facebook-event!</h1></a></div>
+				<div align="center"><a href="https://www.facebook.com/event.php?eid=150643561668481" target="_blank"><h1>Click here for more information and RSVP on our facebook-event!</h1></a></div>
 				</p>
 				<p><div align="justify">
 				So, now to the good stuff - the free download!<br />
