--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -45,7 +45,7 @@
 			<div class="sections">				
 				<p class="top">		
 					<center><h3>MEMMAKER<br />
-					for the first time on stage in Stockholm, Sweden</h3></center>
+					- for the first time on stage in Stockholm, Sweden -</h3></center>
 				</p>
 				<p>
 				<div align="justify">We've invited the Canadian/Danish band <strong>MEMMAKER</strong> to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album <strong>HOW TO ENLIST IN A ROBOT UPRISING</strong> is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
@@ -57,8 +57,8 @@
 				<div align="center"><a href="https://www.facebook.com/event.php?eid=150643561668481" target="_blank"><h1>Click here for more information and RSVP on our facebook-event!</h1></a></div>
 				</p>
 				<p><div align="justify">
-				So, now to the good stuff - the free download!<br />
-				Click this link and Get Your Ass To Club Pneumatique Electronique!<a href="http://club-pneumatique.org/Memmaker_-_Get_Your_Ass_To_Mars.mp3"><h1>MEMMAKER - Get Your Ass To Mars</h1></a>
+				<strong>So, now to the good stuff - the free download!</strong><br />
+				Click this link and Get Your Ass To Club Pneumatique Electronique!<a href="http://club-pneumatique.org/Memmaker_-_Get_Your_Ass_To_Mars.mp3" target="_blank"><h1>MEMMAKER - Get Your Ass To Mars</h1></a>
 				</div></p>
 			</div>	
 							
