--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -56,7 +56,7 @@
 				<p>
 				<div align="center"><a href="https://www.facebook.com/event.php?eid=150643561668481" target="_blank"><h1>Click here for more information and RSVP on our facebook-event!</h1></a></div>
 				</p>
-				<p><div align="justify">
+				<p><div align="center">
 				<strong>So, now to the good stuff - the free download!</strong><br />
 				Click this link and Get Your Ass To Club Pneumatique Electronique!<a href="http://club-pneumatique.org/Memmaker_-_Get_Your_Ass_To_Mars.mp3" target="_blank"><h1>MEMMAKER - Get Your Ass To Mars</h1></a>
 				</div></p>
