--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -16,7 +16,7 @@
     <meta property="og:description"
           content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!"/>
 
-  <title>Club Pneumatique - Next Event: 21 May, 2011</title>
+  <title>Club Pneumatique Electronique - free MEMMAKER download</title>
   <meta name="description" content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!">
   <meta name="author" content="Daniel Sundström">
 
@@ -48,7 +48,7 @@
 					- for the first time on stage in Stockholm, Sweden -</h3></center>
 				</p>
 				<p>
-				<div align="justify">We've invited the Canadian/Danish band <strong>MEMMAKER</strong> to Stockholm, Sweden to be our guests at our final spring event this season. Their debut album <strong>HOW TO ENLIST IN A ROBOT UPRISING</strong> is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial music.<br />
+				<div align="justify">We've invited the Canadian/Danish band <strong>MEMMAKER</strong> to Stockholm, Sweden to be our guests at the final spring event for this season. Their debut album <strong>HOW TO ENLIST IN A ROBOT UPRISING</strong> is, according to themselves, the perfect expression of dark, driving energy based on their extensive interest in EBM, noise and industrial music.<br />
 				<br />
 				For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!
 				</div>
