linked the memmaker logotype.

--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -39,7 +39,7 @@
     <div id="main">
     		<center>
 			<img src="/img/logo.png" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<img src="/memmaker_logo_small.png" />
+			<a href="http://www.memmaker.ca/" target="_blank"><img src="/memmaker_logo_small.png" /></a>
 			</center>
 			<br class="clear"/>
 			<div class="sections">				
