fixed some meta-information.

--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -17,7 +17,7 @@
           content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!"/>
 
   <title>Club Pneumatique Electronique - free MEMMAKER download</title>
-  <meta name="description" content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!">
+  <meta name="description" content="We've invited the Canadian/Danish band MEMMAKER to Stockholm, Sweden to be our guests at the final spring event for this season. Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to themselves, the perfect expression of dark, driving energy based on their extensive interest in EBM, noise and industrial music.">
   <meta name="author" content="Daniel Sundström">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
