Added download link to regular pages.

--- a/views/index.erb
+++ b/views/index.erb
@@ -74,7 +74,8 @@
 					<h3>Nästa Klubb - 21 maj</h3>
 					<p>Efter en lyckad säsong av klubbkvällar är det nu dags för den spektakulära finalen som inträffar lördagen den 21:a maj. Kvällen till ära har vi bokat det kanadensiska bandet MEMMAKER som frontas av Yann Faussurier och Guillaume Nadon, även kända som ISZOLOSCOPE.<br /><br />
 					
-					Deras debutalbum HOW TO ENLIST IN A ROBOT UPRISING är enligt dem själva det perfekta uttrycket av mörk, drivande energi skapat utifrån deras intresse för EBM, noise och industri.<br /><br />
+					Deras debutalbum HOW TO ENLIST IN A ROBOT UPRISING är enligt dem själva det perfekta uttrycket av mörk, drivande energi skapat utifrån deras intresse för EBM, noise och industri.<br />
+					<strong>Missa inte chansen att ladda ner ett gratis spår av MEMMAKER <a href="http://club-pneumatique.org/download">här!</a></strong><br /><br />
 					
 					De kommer att genomföra en osannolikt hård och dansant livespelning som ni garanterat inte vill missa!<br /><br/>
 					
