--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -73,7 +73,9 @@
 					<h3>Next event - 21 may</h3>
 					<p>Following our successful series of club nights the time has now come for our season finale - scheduled to take place on saturday the 21st of may. In order to make this a memorable night we've booked the canadian band MEMMAKER, fronted by Yann Faussurier and Guillaume Nadon - a.k.a ISZOLOSCOPE.<br /><br />
 					
-					Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial.<br /><br />
+					Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial.<br />
+					<strong>Don't miss out on our free download of a MEMMAKER track - get it <a href="http://club-pneumatique.org/download">here!</a></strong>
+					<br /><br />
 					
 					For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!<br /><br/>
 					
