Updated code for the redirect view.

--- a/views/club_event.erb
+++ b/views/club_event.erb
@@ -1,36 +1,30 @@
 <!doctype html xmlns:og="http://ogp.me/ns#">  
-
-<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<html lang="en" class="no-js">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="google-site-verification" content="M8z33FJkudO8GpriRExkXhn3x8c6zXqvKlD9CDSZgDk" />
-  <meta property="og:title" content="Club Pneumatique"/>
+ 	<meta charset="utf-8">
+ 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="google-site-verification" content="M8z33FJkudO8GpriRExkXhn3x8c6zXqvKlD9CDSZgDk" />
+ 	<meta property="og:title" content="Club Pneumatique"/>
     <meta property="og:type" content="club"/>
     <meta property="og:url" content="http://club-pneumatique.org"/>
     <meta property="og:image" content="http://club-pneumatique.org/images/logo.png"/>
     <meta property="og:description"
           content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!"/>
 
-  <title>Club Pneumatique - Next Event: 21 May, 2011</title>
-  <meta name="description" content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!">
-  <meta name="author" content="Daniel Sundström">
+	<title>Club Pneumatique</title>
+	<meta name="description" content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!">
+	<meta name="author" content="">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <link rel="stylesheet" href="/css/style.css?v=2">
-  <script src="/js/libs/modernizr-1.6.min.js"></script>
-
-
+	<link rel="stylesheet" href="/css/style.css?v=2">
+	<script src="/js/libs/modernizr-1.6.min.js"></script>
+	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/" />
 </head>
 
 <body>
-stuff!
+<p>Please follow <a href="http://www.facebook.com/">this link</a> to get information about our latest 'n' greatest event!</p>
 </body>
 </html>
