Updated URL for current event.

--- a/views/club_event.erb
+++ b/views/club_event.erb
@@ -25,6 +25,6 @@
 </head>
 
 <body>
-<p>Please follow <a href="http://www.facebook.com/">this link</a> to get information about our latest 'n' greatest event!</p>
+<p>Please follow <a href="http://www.facebook.com/event.php?eid=206747236045797">this link</a> to get information about our latest 'n' greatest event!</p>
 </body>
 </html>
