oups... forgot that one has to update the URL in two places.

--- a/views/club_event.erb
+++ b/views/club_event.erb
@@ -21,7 +21,7 @@
 
 	<link rel="stylesheet" href="/css/style.css?v=2">
 	<script src="/js/libs/modernizr-1.6.min.js"></script>
-	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/" />
+	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/event.php?eid=206747236045797" />
 </head>
 
 <body>
