trying out a content update

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
     <meta property="og:description"
           content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!"/>
 
-  <title>Club Pneumatique - Next Event: 21 May, 2011</title>
+  <title>Club Pneumatique - Next Event: 3 September, 2011</title>
   <meta name="description" content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!">
   <meta name="author" content="Daniel Sundström">
 
@@ -43,35 +43,9 @@
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">				
-				<div class="section">
-					<p class="top">						
-					Pneumatique Electronique är en sprillans ny månadsklubb där det kommer att spelas dansant elektronisk musik på lördagskvällar från 21-02. Vi har ett par sköna residenta DJs och utöver det kommer vi boka gäst-DJs och gäst-artister. Ambitionen är att under en kväll minska glappet mellan många av de grymma elektroniska genrer som florerar där ute!
-					</p>
-					<p>
-					Kolla här eller på <a href="http://facebook.com/pneumatique.electronique">Facebook</a> för mer info kring varje kväll!
-					</p>
-
-					<h4>Resident DJs</h4>
-					<strong>DJ Nephilim</strong> <br /><span class="genres">(Electronica / Rytmisk noise)</span><br /><br />
-					<strong>Itchy && Scratchy</strong><br /> <span class="genres">(Aggrotech / Electro / Hardstyle / House / Rytmisk noise)</span><br /><br />
-					<strong>DJ Kraken</strong> <br /><span class="genres">(Aggrotech / IDM / Rytmisk noise)</span><br /><br />
-
-					<h4>Lokal</h4>
-
-					Lokalen vi håller till i är <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal</a> på David Bagares gata 15, helt nyrenoverad för 2011!
-					<br /><br />
-
-					<!-- <h4>Mailinglista</h4>
-					<p>Lägg till din email för att få de senaste nyheterna. Vi kommer självklart aldrig sälja eller
-						distribuera din email vidare, vi hatar spam lika mycket som du.</p>
-					<form action="/email" method="POST">
-						<input type="text" name="email" />
-						<input type="submit" value="save">
-					</form> -->
-				</div>
 				
 				<div class="section">
-					<h3>Nästa Klubb - 21 maj</h3>
+					<h3>Nästa Klubb - 3 september</h3>
 					<p>Efter en lyckad säsong av klubbkvällar är det nu dags för den spektakulära finalen som inträffar lördagen den 21:a maj. Kvällen till ära har vi bokat det kanadensiska bandet MEMMAKER som frontas av Yann Faussurier och Guillaume Nadon, även kända som ISZOLOSCOPE.<br /><br />
 					
 					Deras debutalbum HOW TO ENLIST IN A ROBOT UPRISING är enligt dem själva det perfekta uttrycket av mörk, drivande energi skapat utifrån deras intresse för EBM, noise och industri.<br />
