Another content update.

--- a/views/index.erb
+++ b/views/index.erb
@@ -46,38 +46,23 @@
 				
 				<div class="section">
 					<h3>Nästa Klubb - 3 september</h3>
-					<p>Efter en lyckad säsong av klubbkvällar är det nu dags för den spektakulära finalen som inträffar lördagen den 21:a maj. Kvällen till ära har vi bokat det kanadensiska bandet MEMMAKER som frontas av Yann Faussurier och Guillaume Nadon, även kända som ISZOLOSCOPE.<br /><br />
+					<p>Vi kan knappt bärga oss! Henrik Bäckström har tillsammans med sin kollega Oscar Holter slagit synthscenen med häpnad i och med Necro Facility's banbrytande tredje skiva "Wintermute". Det inte alla vet är att Henrik även är en grym techno / minimal DJ och producent. En förmåga som han kommer att visa prov på under höstpremiären av PE/CLUB!<br /><br />
 					
-					Deras debutalbum HOW TO ENLIST IN A ROBOT UPRISING är enligt dem själva det perfekta uttrycket av mörk, drivande energi skapat utifrån deras intresse för EBM, noise och industri.<br />
-					<strong>Missa inte chansen att ladda ner ett gratis spår av MEMMAKER <a href="http://club-pneumatique.org/download">här!</a></strong><br /><br />
+					Som support till Henrik kommer PE/CLUBs residenta DJs DJ Nephilim, Itchy && Scratchy samt DJ Kraken svetta upp er ordentligt på dansgolvet!<br /><br />
 					
-					De kommer att genomföra en osannolikt hård och dansant livespelning som ni garanterat inte vill missa!<br /><br/>
+					PE/CLUB innebär startskottet för Nalen Klubb och Pneumatique Electroniques storsatsning inför höstsäsongen. Vi kommer att erbjuda den tyngsta, mörkaste och fetaste elektroniska musiken som ni inte kommer kunna låta bli att dansa till! Det kommer bli helt magiskt!<br /><br/>
 					
-					För att värma upp era fötter och sinnen inför MEMMAKERS totala urladdning kommer våra residenta DJs att spela den mest dansanta elektroniska musiken för er.<br /><br />
-					
-					Som om detta inte vore nog så har vi i samarbete med SYNTH PICKNICK arrangerat den ultimata förfesten åt er, vi kommer tillsammans med synthpicknick-gänget spela musik för er ute på grönbetet vid Kaknästornet från klockan 13:00. När sedan synthpicknicken lider mot sitt slut är det bara till att ta bussen till NALEN KLUBB för att fortsätta festen!<br /><br />
-					
-					Läs mer om synthpicknick här:<br />
-					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a><br />
-					<a href="http://www.facebook.com/event.php?eid=169653376422113">http://www.facebook.com/event.php?eid=169653376422113</a><br /><br />
-
-
 					Tid: 21-02<br />
 					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
 					Lineup:<br />
-					- MEMMAKER (LIVE)<br /><br />
+					/ HENRIK BÄCKSTRÖM (techno*minimal)<br /><br />
 
 					Residents:<br />
-					- DJ Nephilim<br />
-					- Itchy && Scratchy<br />
-					- DJ Kraken
+					/ DJ Nephilim<br />
+					/ Itchy && Scratchy<br />
+					/ DJ Kraken
 					</p>
-<br />
-					<p>
-						<a href="/images/flyer1.png"><img src="/img/flyer1.png" width="100px"/></a>
-						<a href="/images/flyer2.jpg"><img src="/img/flyer2.jpg" width="100px"/></a>
-					</p>	
 				</div>	
 				
 				<br class="clear"/>
