pimping some more updates

--- a/views/index.erb
+++ b/views/index.erb
@@ -43,7 +43,6 @@
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">				
-				
 				<div class="section">
 					<h3>Nästa Klubb - 3 september</h3>
 					<p>Vi kan knappt bärga oss! Henrik Bäckström har tillsammans med sin kollega Oscar Holter slagit synthscenen med häpnad i och med Necro Facility's banbrytande tredje skiva "Wintermute". Det inte alla vet är att Henrik även är en grym techno / minimal DJ och producent. En förmåga som han kommer att visa prov på under höstpremiären av PE/CLUB!<br /><br />
@@ -53,8 +52,9 @@
 					PE/CLUB innebär startskottet för Nalen Klubb och Pneumatique Electroniques storsatsning inför höstsäsongen. Vi kommer att erbjuda den tyngsta, mörkaste och fetaste elektroniska musiken som ni inte kommer kunna låta bli att dansa till! Det kommer bli helt magiskt!<br /><br/>
 					
 					Tid: 21-02<br />
-					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
-<br /><br />
+					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a><br />
+					Facebook: <a href="http://www.facebook.com/event.php?eid=206747236045797">event</a>
+					<br /><br />
 					Lineup:<br />
 					/ HENRIK BÄCKSTRÖM (techno*minimal)<br /><br />
 
@@ -63,7 +63,10 @@
 					/ Itchy && Scratchy<br />
 					/ DJ Kraken
 					</p>
-				</div>	
+				</div>
+				<div class="section">
+				<img src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" />
+				</div>
 				
 				<br class="clear"/>
 			</div>	
