--- a/views/index.erb
+++ b/views/index.erb
@@ -53,7 +53,7 @@
 					
 					Tid: 21-02<br />
 					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a><br />
-					Facebook: <a href="http://www.facebook.com/event.php?eid=206747236045797">event</a>
+					Facebook: <a href="http://www.facebook.com/event.php?eid=206747236045797">RSVP:a på eventet här!</a>
 					<br /><br />
 					Lineup:<br />
 					/ HENRIK BÄCKSTRÖM (techno*minimal)<br /><br />
@@ -65,7 +65,7 @@
 					</p>
 				</div>
 				<div class="section">
-				<img src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" />
+				<img align="center" src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" />
 				</div>
 				
 				<br class="clear"/>
