aaaaaand fine tuning some more.

--- a/views/index.erb
+++ b/views/index.erb
@@ -65,7 +65,7 @@
 					</p>
 				</div>
 				<div class="section">
-				<img align="center" src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" />
+				<center><img src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" /></center>
 				</div>
 				
 				<br class="clear"/>
