Added english info.

--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -43,67 +43,29 @@
 			<br class="clear"/>
 			<div class="sections">				
 				<div class="section">
-					<p class="top">		
-						Pneumatique Electronique is here on a monthly basis to cater to your electronic music needs every third saturday night from 9pm to 2am. Using our resident DJs and guest DJs or guest acts we'll be playing danceable electronic music to you. Our ambition is to reduce the gap between the plethora of electronic genres available out there!					
-					</p>
-					<p>
-					Check out <a href="http://facebook.com/pneumatique.electronique">Facebook</a> for more information about every event!
-					</p>
-
-					<h4>Resident DJs</h4>
-					<strong>DJ Nephilim</strong> <br /><span class="genres">(Electronica / Rythmic noise)</span><br /><br />
-					<strong>Itchy && Scratchy</strong><br /> <span class="genres">(Aggrotech / Electro / Hardstyle / House / Rythmic noise)</span><br /><br />
-					<strong>DJ Kraken</strong> <br /><span class="genres">(Aggrotech / IDM / Rythmic noise)</span><br /><br />
-
-					<h4>Venue</h4>
-
-					Our venue is <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalen Klubb</a> at David Bagares gata 15, completely refurbished for 2011!
-					<br /><br />
-
-					<!-- <h4>The List</h4>
-					<p>Add your email to our list to get the latest info and news. <br />Of course, we'll <b>never</b>
-						sell or distribute your email to someone.</p>
-					<form action="/email" method="POST">
-						<input type="text" name="email" />
-						<input type="submit" value="save">
-					</form> -->
-				</div>
-				
-				<div class="section">
-					<h3>Next event - 21 may</h3>
-					<p>Following our successful series of club nights the time has now come for our season finale - scheduled to take place on saturday the 21st of may. In order to make this a memorable night we've booked the canadian band MEMMAKER, fronted by Yann Faussurier and Guillaume Nadon - a.k.a ISZOLOSCOPE.<br /><br />
+					<h3>Next event - 3 september</h3>
+					<p>We can barely contain ourselves! Henrik Bäckström struck the synth scene with awe together with his colleague Oscar Holter when they gave us their third album "Wintermute". Unbeknownst to many it turns out that Henrik is also a kick ass techno / minimal DJ and producer. Guess what? He's gonna show us some of that stuff at the autumn premiere of PE/CLUB!<br /><br />
 					
-					Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial.<br />
-					<strong>Don't miss out on our free download of a MEMMAKER track - get it <a href="http://club-pneumatique.org/download">here!</a></strong>
-					<br /><br />
+					Supporting Henrik will be resident DJs DJ Nephilim, Itchy && Scratchy along with DJ Kraken. They're gonna make you sweat on the dancefloor!<br /><br />
 					
-					For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!<br /><br/>
+					<strong>PE/CLUB</strong> marks the beginning of the newly launched club season together with Nalen Klubb and Pneumatique Electronique. We'll give you the heaviest, darkest and grooviest electronic music. You won't be able to not dance - it'll be pure magic!<br /><br/>
 					
-					To get your feet moving and senses warmed up before the torrent of musical energy that MEMMAKER will release upon us our resident DJs will play the utmost danceable electronic music for you.<br /><br />
-					
-					As if this wasn't enough we have a special cooperation with SYNTH PICKNICK in order to create the ultimate pre-party for you. Together with the synth picknick posse we'll be DJing from 13:00 by Kaknästornet. And when the end of synth picknick is nigh all you need to do is to get on the bus and head to NALEN KLUBB to continue the party!<br /><br />
-					
-					Read more about synth picknick here:<br />
-					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a><br />
-					<a href="http://www.facebook.com/event.php?eid=169653376422113">http://www.facebook.com/event.php?eid=169653376422113</a><br /><br />
-
 					Time: 21-02<br />
-					Place: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
-<br /><br />
+					Place: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a><br />
+					Facebook: <a href="http://www.facebook.com/event.php?eid=206747236045797">RSVP:a to our event here</a>
+					<br /><br />
 					Lineup:<br />
-					- MEMMAKER (LIVE)<br /><br />
+					/ HENRIK BÄCKSTRÖM (techno*minimal)<br /><br />
 
 					Residents:<br />
-					- DJ Nephilim<br />
-					- Itchy && Scratchy<br />
-					- DJ Kraken
+					/ DJ Nephilim<br />
+					/ Itchy && Scratchy<br />
+					/ DJ Kraken
 					</p>
-<br />
-					<p>
-						<a href="/images/flyer1.png"><img src="/img/flyer1.png" width="100px"/></a>
-						<a href="/images/flyer2.jpg"><img src="/img/flyer2.jpg" width="100px"/></a>
-					</p>	
-				</div>	
+				</div>
+				<div class="section">
+				<center><img src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" /></center>
+				</div>
 				
 				<br class="clear"/>
 			</div>	
