--- a/views/index.erb
+++ b/views/index.erb
@@ -49,7 +49,7 @@
 					
 					Som support till Henrik kommer PE/CLUBs residenta DJs DJ Nephilim, Itchy && Scratchy samt DJ Kraken svetta upp er ordentligt på dansgolvet!<br /><br />
 					
-					PE/CLUB innebär startskottet för Nalen Klubb och Pneumatique Electroniques storsatsning inför höstsäsongen. Vi kommer att erbjuda den tyngsta, mörkaste och fetaste elektroniska musiken som ni inte kommer kunna låta bli att dansa till! Det kommer bli helt magiskt!<br /><br/>
+					<strong>PE/CLUB</strong> innebär startskottet för Nalen Klubb och Pneumatique Electroniques storsatsning inför höstsäsongen. Vi kommer att erbjuda den tyngsta, mörkaste och fetaste elektroniska musiken som ni inte kommer kunna låta bli att dansa till! Det kommer bli helt magiskt!<br /><br/>
 					
 					Tid: 21-02<br />
 					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a><br />
