--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -52,7 +52,7 @@
 					
 					Time: 21-02<br />
 					Place: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a><br />
-					Facebook: <a href="http://www.facebook.com/event.php?eid=206747236045797">RSVP:a to our event here</a>
+					Facebook: <a href="http://www.facebook.com/event.php?eid=206747236045797">RSVP to our event here</a>
 					<br /><br />
 					Lineup:<br />
 					/ HENRIK BÄCKSTRÖM (techno*minimal)<br /><br />
