Added views for the remaining clubs redirect URLs used for QR codes, as well as updated the already existing one.

--- a/views/laserdisko_event.erb
+++ b/views/laserdisko_event.erb
@@ -8,7 +8,7 @@
     <meta property="og:type" content="club"/>
     <meta property="og:url" content="http://club-pneumatique.org"/>
     <meta property="og:image" content="http://club-pneumatique.org/images/logo.png"/>
-	<title>Club Pneumatique</title>
+	<title>Laserdisko/title>
 	<meta name="author" content="">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,10 +17,10 @@
 
 	<link rel="stylesheet" href="/css/style.css?v=2">
 	<script src="/js/libs/modernizr-1.6.min.js"></script>
-	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/event.php?eid=206747236045797" />
+	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/event.php?eid=237842622924750" />
 </head>
 
 <body>
-<p>Please follow <a href="http://www.facebook.com/event.php?eid=206747236045797">this link</a> to get information about our latest 'n' greatest event!</p>
+<p>Please follow <a href="http://www.facebook.com/event.php?eid=237842622924750">this link</a> to get information about our latest 'n' greatest event!</p>
 </body>
 </html>
