oups, minor bug.

--- a/views/laserdisko_event.erb
+++ b/views/laserdisko_event.erb
@@ -8,7 +8,7 @@
     <meta property="og:type" content="club"/>
     <meta property="og:url" content="http://club-pneumatique.org"/>
     <meta property="og:image" content="http://club-pneumatique.org/images/logo.png"/>
-	<title>Laserdisko/title>
+	<title>Laserdisko</title>
 	<meta name="author" content="">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
