--- a/views/adrenalin_event.erb
+++ b/views/adrenalin_event.erb
@@ -17,10 +17,10 @@
 
 	<link rel="stylesheet" href="/css/style.css?v=2">
 	<script src="/js/libs/modernizr-1.6.min.js"></script>
-	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/groups/23530413121" />
+	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/event.php?eid=205231116206554" />
 </head>
 
 <body>
-<p>Please follow <a href="http://www.facebook.com/groups/23530413121">this link</a> to get information about our latest 'n' greatest event!</p>
+<p>Please follow <a href="http://www.facebook.com/event.php?eid=205231116206554">this link</a> to get information about our latest 'n' greatest event!</p>
 </body>
 </html>
