Started working on a "stay tuned" page.

--- a/views/index.erb
+++ b/views/index.erb
@@ -42,8 +42,10 @@
 			<a href="/" style="display:block; float:right"><img src="/img/flags/png/se.png" /></a>
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
-			<div class="sections">				
-				<div class="section">
+			<div class="sections">
+			<h3>Nästa Klubb - 1 oktober</h3>
+					<p>Stay tuned for more information!</p> 
+				<!--<div class="section">
 					<h3>Nästa Klubb - 3 september</h3>
 					<p>Vi kan knappt bärga oss! Henrik Bäckström har tillsammans med sin kollega Oscar Holter slagit synthscenen med häpnad i och med Necro Facility's banbrytande tredje skiva "Wintermute". Det inte alla vet är att Henrik även är en grym techno / minimal DJ och producent. En förmåga som han kommer att visa prov på under höstpremiären av PE/CLUB!<br /><br />
 					
@@ -68,7 +70,7 @@
 				<center><img src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" /></center>
 				</div>
 				
-				<br class="clear"/>
+				<br class="clear"/>-->
 			</div>	
 			
 			<div class="sections no-top">				
