--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -41,8 +41,10 @@
 			<a href="/" style="display:block; float:right"><img src="/img/flags/png/se.png" /> </a>			
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
-			<div class="sections">				
-				<div class="section">
+			<div class="sections">
+			<h3>Next event - 1 october</h3>
+					<p>Stay tuned for more information!</p> 
+				<!--<div class="section">
 					<h3>Next event - 3 september</h3>
 					<p>We can barely contain ourselves! Henrik Bäckström struck the synth scene with awe together with his colleague Oscar Holter when they gave us their third album "Wintermute". Unbeknownst to many it turns out that Henrik is also a kick ass techno / minimal DJ and producer. Guess what? He's gonna show us some of that stuff at the autumn premiere of PE/CLUB!<br /><br />
 					
@@ -67,7 +69,7 @@
 				<center><img src="http://club-pneumatique.org/facebook_eventimg_110903.jpg" /></center>
 				</div>
 				
-				<br class="clear"/>
+				<br class="clear"/>-->
 			</div>	
 			
 			<div class="sections no-top">				
