--- a/views/index.erb
+++ b/views/index.erb
@@ -43,7 +43,7 @@
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">
-			<h3>Nästa Klubb - 1 oktober</h3>
+			<h3>Nästa Klubb - 5 november</h3>
 					<p>Stay tuned for more information!</p> 
 				<!--<div class="section">
 					<h3>Nästa Klubb - 3 september</h3>
