--- a/views/laserdisko_event.erb
+++ b/views/laserdisko_event.erb
@@ -17,10 +17,12 @@
 
 	<link rel="stylesheet" href="/css/style.css?v=2">
 	<script src="/js/libs/modernizr-1.6.min.js"></script>
-	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/event.php?eid=237842622924750" />
+	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/Laserdisko" />
 </head>
 
+<!-- group link until event is available -->
+
 <body>
-<p>Please follow <a href="http://www.facebook.com/event.php?eid=237842622924750">this link</a> to get information about our latest 'n' greatest event!</p>
+<p>Please follow <a href="http://www.facebook.com/Laserdisko">this link</a> to get information about our latest 'n' greatest event!</p>
 </body>
 </html>
