Updated some of the event qr code redirects.

--- a/views/club_event.erb
+++ b/views/club_event.erb
@@ -17,12 +17,10 @@
 
 	<link rel="stylesheet" href="/css/style.css?v=2">
 	<script src="/js/libs/modernizr-1.6.min.js"></script>
-	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/groups/177928765614230/" />
+	<meta http-equiv="Refresh" content="0; url=http://www.facebook.com/event.php?eid=295577837120071" />
 </head>
 
-<!-- group link until event is available -->
-
 <body>
-<p>Please follow <a href="http://www.facebook.com/groups/177928765614230/">this link</a> to get information about our latest 'n' greatest event!</p>
+<p>Please follow <a href="http://www.facebook.com/event.php?eid=295577837120071">this link</a> to get information about our latest 'n' greatest event!</p>
 </body>
 </html>
