--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -42,7 +42,7 @@
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">
-			<h3>Next event - 5 november</h3>
+			<h3>Change made in test2 branch</h3>
 					<p>Stay tuned for more information!</p> 
 				<!--<div class="section">
 					<h3>Next event - 3 september</h3>
